--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -45,10 +45,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/text_size_18sp"
-            android:textColor="@color/color_red_main"
+            android:textColor="#33CC44"
             android:textStyle="bold"
             android:layout_marginLeft="@dimen/dp_5"
             android:text="VENUS"/>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
